# nodemcu-rgblight

./: .gitignore  LICENSE
core/include/: secret.h
core/src/: main.cpp
desktop-client/: CMakeLists.txt  main.c
desktop-client/ui/: main.glade  main.glade~
pcb/: fp-info-cache  pcb-addressline5V.dsn  pcb-addressline5V.kicad_pcb  pcb-addressline5V.kicad_prl  pcb-addressline5V.kicad_pro  pcb-addressline5V.kicad_sch  pcb.kicad_pcb  pcb.kicad_pro  pcb.kicad_sch
